--- a/ViewDetails.css
+++ b/ViewDetails.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     background-color: #f5f5f5;
     width: 90%; 
-
+    justify-content: center;
 }
 .Viewdiv1{
     background-color: #f5f5f5;
@@ -21,6 +21,7 @@
     align-items: center;
     justify-content: space-between;
     margin-top: 0;
+    margin-left: 115px;
 }
 
 .BookDetails-View{
@@ -40,17 +41,30 @@
 .Viewdiv2, .Viewdiv3{
     border-radius: 10px;
 }
+
+#submit-comment-btn {
+    width: 100px;
+    font-size: 10px;
+    padding: 5px 5px;
+    border-radius: 30px;
+    cursor: pointer;
+    border: 1px solid #ff6600;
+    background-color: white;
+    color: #ff6600;
+    margin: 0 10px;
+}
+
 .Viewdiv3{
-    background-color: #f5f5f5;
     margin-top: 20px;
-    margin-left: 6em;
     height: 10vh;
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 95%;
-
+    width: 100%;
+    position: sticky;
+    bottom: 0;
 }
+
 .actions{
     display: flex;
     flex-direction: row;
